# mvp-clientes

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
apps/clientes/: models.py  serializers.py  urls.py  views.py
apps/clientes/migrations/: 0001_initial.py
apps/users/: apps.py  models.py  serializers.py  utils.py  views.py
apps/users/migrations/: 0001_initial.py
config/: openapi.py  settings.py  urls.py  wsgi.py
